crates/cribo/tests/snapshots/execution_results@stickytape_script_using_from_to_import_multiple_values.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_using_from_to_import_multiple_values/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
