crates/cribo/tests/snapshots/execution_results@stickytape_script_using_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_using_module_in_package/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
