crates/cribo/tests/snapshots/execution_results@stickytape_single_file_using_stdlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_single_file_using_stdlib/main.py
---
ExecutionResults {
    status: Success,
    stdout: "f7ff9e8b7bb2e09b70935a5d785e0cc5d9d0abf0",
    stderr: "",
}
