crates/cribo/tests/snapshots/execution_results@xfail_comprehensive_ast_rewrite.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_comprehensive_ast_rewrite/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 565, in <module>",
}
