crates/cribo/tests/snapshots/execution_results@xfail_four_module_cycle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_four_module_cycle/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Four module cycle result: A(B(C(D(A_final))))",
    stderr: "",
}
